--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     ],
     "wl": "src/events.wl",
     "styles": "styles/ui.css",
-    "priority": -100
+    "priority": -100,
+    "important": true
   },
   "repository": {
     "type": "git",
