--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "wljs-cells",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "WLJS Cells manager",
   "scripts": {
-    "build": "node --max-old-space-size=8192 ./node_modules/.bin/rollup --config rollup.config.mjs"
+    "build": "node --max-old-space-size=8192 ./node_modules/.bin/rollup --config rollup.config.mjs",
+    "restore": "mkdir _temp && cd _temp && git clone https://github.com/JerryI/wljs-cells && mv wljs-cells/.git ../.git && cd .. && rm -rf _temp"
   },
   "defaultPackage": true,
   "wljs-meta": {
