--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wljs-cells",
-  "version": "0.3.8",
+  "version": "0.3.9",
   "description": "WLJS Cells manager",
   "scripts": {
     "build": "node --max-old-space-size=8192 ./node_modules/.bin/rollup --config rollup.config.mjs",
@@ -12,7 +12,7 @@
       "dist/kernel.js"
     ],
     "wl": "src/events.wl",
-    "styles": "styles/ui.css",
+    "styles": ["styles/defaults.css", "styles/ui.css"],
     "priority": -100,
     "important": true
   },
