--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   },
   "defaultPackage": true,
   "wljs-meta": {
-    "jsmodule": [
-      "dist/kernel.js"
-    ],
+    "js": "src/module.js",
     "wl": "src/events.wl",
     "styles": ["styles/defaults.css", "styles/ui.css"],
     "priority": -100,
